--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- Spencer was here -->
     <div class="container">
         <div class="row">
             <div class="column col-sm-12">
