fixed search placeholder

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="left-nav">
                     left Navigation
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for symbol...">
+                        <input type="text" class="form-control" placeholder="Stock">
                         <span class="input-group-btn">
                             <button class="btn btn-primary" type="button">Go!</button>
                         </span>
