--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </div>
     </div>
     <script src="assets/javascript/app.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
 </html>
