position added to css

--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
                         <button id="button-equal" class="btn btn-success equal" value="equals"><h1>=</h1></button>
                         <br><br>
                         <button id="button-clear" class="btn btn-default clear" value="clear"><h1>clear</h1></button>
-                    </div>
-            
+                      </div>
                       <div class="panel-body3">
                         <button id="button-1" class="btn btn-primary number" value="1"><h1>1</h1></button>
                         <button id="button-2" class="btn btn-primary number" value="2"><h1>2</h1></button>
@@ -136,9 +135,9 @@
         </div>
         <div class="row">
             <div class="column col-sm-12">
-                <div class="news-feed">
+                <!-- <div class="news-feed">
                     News Feed
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
