--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection" />
 
     <title>Stock Calculator</title>
 </head>
@@ -58,91 +58,236 @@
                     Main Display
                     <br>
                     <div class="panel-body">
-                        <button id="button-1" class="btn btn-primary number" value="1"><h1>1</h1></button>
-                        <button id="button-2" class="btn btn-primary number" value="2"><h1>2</h1></button>
-                        <button id="button-3" class="btn btn-primary number" value="3"><h1>3</h1></button>
-                        <button id="button-plus" class="btn btn-danger operator" value="plus"><h1>+</h1></button>
-                        <br><br>
-                        <button id="button-4" class="btn btn-primary number" value="4"><h1>4</h1></button>
-                        <button id="button-5" class="btn btn-primary number" value="5"><h1>5</h1></button>
-                        <button id="button-6" class="btn btn-primary number" value="6"><h1>6</h1></button>
-                        <button id="button-minus" class="btn btn-danger operator" value="minus"><h1>&minus;</h1></button>
-                        <br><br>
-                        <button id="button-7" class="btn btn-primary number" value="7"><h1>7</h1></button>
-                        <button id="button-8" class="btn btn-primary number" value="8"><h1>8</h1></button>
-                        <button id="button-9" class="btn btn-primary number" value="9"><h1>9</h1></button>
-                        <button id="button-multiply" class="btn btn-danger operator" value="times"><h1>&times;</h1></button>
-                        <br><br>
-                        <button id="button-0" class="btn btn-primary number" value="0"><h1>0</h1></button>
-                        <button id="button-divide" class="btn btn-danger operator" value="divide"><h1>&divide;</h1></button>
-                        <button id="button-power" class="btn btn-danger operator" value="power"><h1>^</h1></button>
-                        <button id="button-equal" class="btn btn-success equal" value="equals"><h1>=</h1></button>
-                        <br><br>
-                        <button id="button-clear" class="btn btn-default clear" value="clear"><h1>clear</h1></button>
-                      </div>
-                      <br>
-                      <div class="panel-body2">
-                        <button id="button-1" class="btn btn-primary number" value="1"><h1>1</h1></button>
-                        <button id="button-2" class="btn btn-primary number" value="2"><h1>2</h1></button>
-                        <button id="button-3" class="btn btn-primary number" value="3"><h1>3</h1></button>
-                        <button id="button-plus" class="btn btn-danger operator" value="plus"><h1>+</h1></button>
-                        <br><br>
-                        <button id="button-4" class="btn btn-primary number" value="4"><h1>4</h1></button>
-                        <button id="button-5" class="btn btn-primary number" value="5"><h1>5</h1></button>
-                        <button id="button-6" class="btn btn-primary number" value="6"><h1>6</h1></button>
-                        <button id="button-minus" class="btn btn-danger operator" value="minus"><h1>&minus;</h1></button>
-                        <br><br>
-                        <button id="button-7" class="btn btn-primary number" value="7"><h1>7</h1></button>
-                        <button id="button-8" class="btn btn-primary number" value="8"><h1>8</h1></button>
-                        <button id="button-9" class="btn btn-primary number" value="9"><h1>9</h1></button>
-                        <button id="button-multiply" class="btn btn-danger operator" value="times"><h1>&times;</h1></button>
-                        <br><br>
-                        <button id="button-0" class="btn btn-primary number" value="0"><h1>0</h1></button>
-                        <button id="button-divide" class="btn btn-danger operator" value="divide"><h1>&divide;</h1></button>
-                        <button id="button-power" class="btn btn-danger operator" value="power"><h1>^</h1></button>
-                        <button id="button-equal" class="btn btn-success equal" value="equals"><h1>=</h1></button>
-                        <br><br>
-                        <button id="button-clear" class="btn btn-default clear" value="clear"><h1>clear</h1></button>
-                      </div>
-                      <div class="panel-body3">
-                        <button id="button-1" class="btn btn-primary number" value="1"><h1>1</h1></button>
-                        <button id="button-2" class="btn btn-primary number" value="2"><h1>2</h1></button>
-                        <button id="button-3" class="btn btn-primary number" value="3"><h1>3</h1></button>
-                        <button id="button-plus" class="btn btn-danger operator" value="plus"><h1>+</h1></button>
-                        <br><br>
-                        <button id="button-4" class="btn btn-primary number" value="4"><h1>4</h1></button>
-                        <button id="button-5" class="btn btn-primary number" value="5"><h1>5</h1></button>
-                        <button id="button-6" class="btn btn-primary number" value="6"><h1>6</h1></button>
-                        <button id="button-minus" class="btn btn-danger operator" value="minus"><h1>&minus;</h1></button>
-                        <br><br>
-                        <button id="button-7" class="btn btn-primary number" value="7"><h1>7</h1></button>
-                        <button id="button-8" class="btn btn-primary number" value="8"><h1>8</h1></button>
-                        <button id="button-9" class="btn btn-primary number" value="9"><h1>9</h1></button>
-                        <button id="button-multiply" class="btn btn-danger operator" value="times"><h1>&times;</h1></button>
-                        <br><br>
-                        <button id="button-0" class="btn btn-primary number" value="0"><h1>0</h1></button>
-                        <button id="button-divide" class="btn btn-danger operator" value="divide"><h1>&divide;</h1></button>
-                        <button id="button-power" class="btn btn-danger operator" value="power"><h1>^</h1></button>
-                        <button id="button-equal" class="btn btn-success equal" value="equals"><h1>=</h1></button>
-                        <br><br>
-                        <button id="button-clear" class="btn btn-default clear" value="clear"><h1>clear</h1></button>
-                      </div>
-                  </div>
-            
+                        <button id="button-1" class="btn btn-primary number" value="1">
+                            <h1>1</h1>
+                        </button>
+                        <button id="button-2" class="btn btn-primary number" value="2">
+                            <h1>2</h1>
+                        </button>
+                        <button id="button-3" class="btn btn-primary number" value="3">
+                            <h1>3</h1>
+                        </button>
+                        <button id="button-plus" class="btn btn-danger operator" value="plus">
+                            <h1>+</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-4" class="btn btn-primary number" value="4">
+                            <h1>4</h1>
+                        </button>
+                        <button id="button-5" class="btn btn-primary number" value="5">
+                            <h1>5</h1>
+                        </button>
+                        <button id="button-6" class="btn btn-primary number" value="6">
+                            <h1>6</h1>
+                        </button>
+                        <button id="button-minus" class="btn btn-danger operator" value="minus">
+                            <h1>&minus;</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-7" class="btn btn-primary number" value="7">
+                            <h1>7</h1>
+                        </button>
+                        <button id="button-8" class="btn btn-primary number" value="8">
+                            <h1>8</h1>
+                        </button>
+                        <button id="button-9" class="btn btn-primary number" value="9">
+                            <h1>9</h1>
+                        </button>
+                        <button id="button-multiply" class="btn btn-danger operator" value="times">
+                            <h1>&times;</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-0" class="btn btn-primary number" value="0">
+                            <h1>0</h1>
+                        </button>
+                        <button id="button-divide" class="btn btn-danger operator" value="divide">
+                            <h1>&divide;</h1>
+                        </button>
+                        <button id="button-power" class="btn btn-danger operator" value="power">
+                            <h1>^</h1>
+                        </button>
+                        <button id="button-equal" class="btn btn-success equal" value="equals">
+                            <h1>=</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-clear" class="btn btn-default clear" value="clear">
+                            <h1>clear</h1>
+                        </button>
+                    </div>
+                    <br>
+                    <div class="panel-body2">
+                        <button id="button-1" class="btn btn-primary number" value="1">
+                            <h1>1</h1>
+                        </button>
+                        <button id="button-2" class="btn btn-primary number" value="2">
+                            <h1>2</h1>
+                        </button>
+                        <button id="button-3" class="btn btn-primary number" value="3">
+                            <h1>3</h1>
+                        </button>
+                        <button id="button-plus" class="btn btn-danger operator" value="plus">
+                            <h1>+</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-4" class="btn btn-primary number" value="4">
+                            <h1>4</h1>
+                        </button>
+                        <button id="button-5" class="btn btn-primary number" value="5">
+                            <h1>5</h1>
+                        </button>
+                        <button id="button-6" class="btn btn-primary number" value="6">
+                            <h1>6</h1>
+                        </button>
+                        <button id="button-minus" class="btn btn-danger operator" value="minus">
+                            <h1>&minus;</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-7" class="btn btn-primary number" value="7">
+                            <h1>7</h1>
+                        </button>
+                        <button id="button-8" class="btn btn-primary number" value="8">
+                            <h1>8</h1>
+                        </button>
+                        <button id="button-9" class="btn btn-primary number" value="9">
+                            <h1>9</h1>
+                        </button>
+                        <button id="button-multiply" class="btn btn-danger operator" value="times">
+                            <h1>&times;</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-0" class="btn btn-primary number" value="0">
+                            <h1>0</h1>
+                        </button>
+                        <button id="button-divide" class="btn btn-danger operator" value="divide">
+                            <h1>&divide;</h1>
+                        </button>
+                        <button id="button-power" class="btn btn-danger operator" value="power">
+                            <h1>^</h1>
+                        </button>
+                        <button id="button-equal" class="btn btn-success equal" value="equals">
+                            <h1>=</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-clear" class="btn btn-default clear" value="clear">
+                            <h1>clear</h1>
+                        </button>
+                    </div>
+                    <div class="panel-body3">
+                        <button id="button-1" class="btn btn-primary number" value="1">
+                            <h1>1</h1>
+                        </button>
+                        <button id="button-2" class="btn btn-primary number" value="2">
+                            <h1>2</h1>
+                        </button>
+                        <button id="button-3" class="btn btn-primary number" value="3">
+                            <h1>3</h1>
+                        </button>
+                        <button id="button-plus" class="btn btn-danger operator" value="plus">
+                            <h1>+</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-4" class="btn btn-primary number" value="4">
+                            <h1>4</h1>
+                        </button>
+                        <button id="button-5" class="btn btn-primary number" value="5">
+                            <h1>5</h1>
+                        </button>
+                        <button id="button-6" class="btn btn-primary number" value="6">
+                            <h1>6</h1>
+                        </button>
+                        <button id="button-minus" class="btn btn-danger operator" value="minus">
+                            <h1>&minus;</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-7" class="btn btn-primary number" value="7">
+                            <h1>7</h1>
+                        </button>
+                        <button id="button-8" class="btn btn-primary number" value="8">
+                            <h1>8</h1>
+                        </button>
+                        <button id="button-9" class="btn btn-primary number" value="9">
+                            <h1>9</h1>
+                        </button>
+                        <button id="button-multiply" class="btn btn-danger operator" value="times">
+                            <h1>&times;</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-0" class="btn btn-primary number" value="0">
+                            <h1>0</h1>
+                        </button>
+                        <button id="button-divide" class="btn btn-danger operator" value="divide">
+                            <h1>&divide;</h1>
+                        </button>
+                        <button id="button-power" class="btn btn-danger operator" value="power">
+                            <h1>^</h1>
+                        </button>
+                        <button id="button-equal" class="btn btn-success equal" value="equals">
+                            <h1>=</h1>
+                        </button>
+                        <br>
+                        <br>
+                        <button id="button-clear" class="btn btn-default clear" value="clear">
+                            <h1>clear</h1>
+                        </button>
+                    </div>
                 </div>
-            </div>
 
+            </div>
         </div>
-        <div class="row">
-            <div class="column col-sm-12">
-                <!-- <div class="news-feed">
+
+    </div>
+    <div class="row">
+        <div class="column col-sm-12">
+            <!-- <div class="news-feed">
                     News Feed
                 </div> -->
-            </div>
         </div>
     </div>
+
+    </div>
+
     <script src="assets/javascript/app.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+
+    <!-- TradingView Widget BEGIN -->
+    <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">{
+        "symbols": [
+            {
+                "proName": "INDEX:SPX",
+                "title": "S&P 500"
+            },
+            {
+                "proName": "INDEX:IUXX",
+                "title": "Nasdaq 100"
+            },
+            {
+                "proName": "FX_IDC:EURUSD",
+                "title": "EUR/USD"
+            },
+            {
+                "proName": "NYMEX:CL1!",
+                "title": "Crude Oil"
+            },
+            {
+                "proName": "FX_IDC:XAUUSD",
+                "title": "Gold"
+            }
+        ],
+            "locale": "en"
+    }</script>
+    <!-- TradingView Widget END -->
+
 </body>
 
 </html>
