fixed position of all html elements

--- a/index.html
+++ b/index.html
@@ -245,14 +245,14 @@
 
             </div>
         </div>
-
+        <div class="row">
+            <div class="column col-sm-12">
+                <div class="news-feed">
+                        News Feed
+                    </div>
+            </div>
     </div>
-    <div class="row">
-        <div class="column col-sm-12">
-            <!-- <div class="news-feed">
-                    News Feed
-                </div> -->
-        </div>
+
     </div>
 
     </div>
@@ -262,30 +262,31 @@
 
     <!-- TradingView Widget BEGIN -->
     <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">{
-        "symbols": [
-            {
-                "proName": "INDEX:SPX",
-                "title": "S&P 500"
-            },
-            {
-                "proName": "INDEX:IUXX",
-                "title": "Nasdaq 100"
-            },
-            {
-                "proName": "FX_IDC:EURUSD",
-                "title": "EUR/USD"
-            },
-            {
-                "proName": "NYMEX:CL1!",
-                "title": "Crude Oil"
-            },
-            {
-                "proName": "FX_IDC:XAUUSD",
-                "title": "Gold"
-            }
-        ],
-            "locale": "en"
-    }</script>
+            "symbols": [
+                {
+                    "proName": "INDEX:SPX",
+                    "title": "S&P 500"
+                },
+                {
+                    "proName": "INDEX:IUXX",
+                    "title": "Nasdaq 100"
+                },
+                {
+                    "proName": "FX_IDC:EURUSD",
+                    "title": "EUR/USD"
+                },
+                {
+                    "proName": "NYMEX:CL1!",
+                    "title": "Crude Oil"
+                },
+                {
+                    "proName": "FX_IDC:XAUUSD",
+                    "title": "Gold"
+                }
+            ],
+                "locale": "en"
+        }
+    </script>
     <!-- TradingView Widget END -->
 
 </body>
