--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     </div>
 
     <script src="assets/javascript/app.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
 
     <!-- TradingView Widget BEGIN -->
     <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">{
