deleted one of the two news feed divs that did not look correct

--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
     </script>
     <!-- TradingView Widget END -->
 
-            <div class="news-feed">
+            <!-- <div class="news-feed">
                 News Feed
             </div>
-        </div>
+        </div> -->
     </div>
     </div>
     <script src="assets/javascript/app.js"></script>
