--- a/index.html
+++ b/index.html
@@ -15,36 +15,26 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css" media="screen,projection" />
-
+    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"  media="screen,projection"/>
     <title>Stock Calculator</title>
 </head>
 
 <body>
     <!-- Spencer was here -->
-    <div class="container">
-        <div class="row">
-            <div class="column col-sm-12">
-                <header>Stock Ticker goes here</header>
+    <div class="row">
+            <!-- Page Title -->
+            <div id="logo" class="col-sm-12">  
+              <h1 class="text-center">Stock Calculator</h1>
+              <h2 class="text-center"></h2>
+              <h4 class="text-center"></h4>
             </div>
-        </div>
-        <div class="row">
-            <div class="column col-sm-12">
-                <div class="column col-sm-4">
-                    <div>Current Nasdaq Price</div>
-                </div>
-                <div class="column col-sm-4">
-                    <div>Current S&P 500 Price</div>
-                </div>
-                <div class="column col-sm-4">
-                    <div>Current Dow Jones Price</div>
-                </div>
-            </div>
-        </div>
+          </div>
+        
         <div class="row">
             <div class="column col-sm-4">
                 <div class="left-nav">
                     left Navigation
+                   
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search">
                         <span class="input-group-btn">
@@ -55,8 +45,21 @@
             </div>
             <div class="column col-sm-8">
                 <div class="main-display">
+
                     Main Display
+
                     <br>
+                    <ul class="collapsible z-depth-2 " data-collapsible="expandable" data-visibility="hidden">
+                            <li>
+                                    <div class="collapsible-header z-depth-2"><i class="material-icons">attach_money</i>Stock Price</div>
+                                    <div class="collapsible-body stock-price"><span id="stock-price">Lorem ipsum dolor sit amet.</span></div>
+                                  </li>
+                                  <li>
+                                    <div class="collapsible-header z-depth-2"><i class="material-icons">chrome_reader_mode</i>News</div>
+                                    <div class="collapsible-body company-news"><span id="company-news">Lorem ipsum dolor sit amet.</span></div>
+                                  </li>
+
+                                  </ul>
                     <div class="row">
                         <div class="stock-buy-calc col s12" data-visibility="hidden">
                             Enter a stock symbol to BUY
