--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 </head>
 
 <body>
+<!-- Currency Converter Script - EXCHANGERATEWIDGET.COM -->
+<div style="width:198px;border:1px solid #55A516;"><div style="text-align:center;background-color:#55A516;width:100%;font-size:13px;font-weight:bold;height:18px;padding-top:2px;"><a href="https://www.exchangeratewidget.com/" style="color:#FFFFFF;text-decoration:none;" rel="nofollow">Currency Converter</a></div><script type="text/javascript" src="//www.exchangeratewidget.com/converter.php?l=en&f=USD&t=EUR&a=1&d=F0F0F0&n=FFFFFF&o=000000&v=1"></script></div>
+<!-- End of Currency Converter Script -->
     <!-- Spencer was here -->
     <div class="container">
         <div class="row">
