--- a/indexIan.html
+++ b/indexIan.html
@@ -176,7 +176,8 @@
     <!-- End of Container -->
 
     <!-- TradingView Widget BEGIN -->
-    <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">{
+    <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">
+    {
             "symbols": [
                 {
                     "proName": "INDEX:SPX",
