--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="column col-sm-4">
                 <div class="left-nav">
-                    <h3>Left Navbar</h3>
+                    left Navigation
                    
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search">
