moved ajax into its own file

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <div class="collapsible-header z-depth-2">
                                 <i class="material-icons">chrome_reader_mode</i>News</div>
                             <div class="collapsible-body company-news">
-                                <span id="company-news">Lorem ipsum dolor sit amet.</span>
+                                <span id="company-news"></span>
                             </div>
                         </li>
 
