--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="main-display" data-visibility="hidden">
                     <span class="main-display">Main Display</span>
                     <br>
-                    <ul class="collapsible z-depth-2 " data-collapsible="expandable" >
+                    <ul class="collapsible z-depth-2 " data-collapsible="expandable">
                         <li>
                             <div class="collapsible-header z-depth-2">
                                 <i class="material-icons">attach_money</i>Stock Price</div>
@@ -89,7 +89,8 @@
         </div>
     </div>
     <!-- TradingView Widget BEGIN -->
-    <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">{
+    <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">
+        {
             "symbols": [
                 {
                     "proName": "INDEX:SPX",
