added the ajax.js reference in index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script src="assets/javascript/app.js"></script>
     <!-- Adding main javascript -->
     <script src="assets/javascript/main.js"></script>
+    <!-- Adding ajax javascript -->
+    <script src="assets/javascript/ajax.js"></script>
 
     <title>Stock Calculator</title>
 </head>
