--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css" media="screen,projection" />
     <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
     <!-- Adding our javascript -->
-    <script src="assets/javascript/app.js"></script>
+    <!-- <script src="assets/javascript/app.js"></script> -->
     <!-- Adding main javascript -->
     <script src="assets/javascript/main.js"></script>
     <!-- Adding ajax javascript -->
@@ -81,9 +81,7 @@
                         <li>
                             <div class="collapsible-header z-depth-2">
                                 <i class="material-icons">chrome_reader_mode</i>News</div>
-                            <div class="collapsible-body company-news">
-                                <span id="company-news"></span>
-                            </div>
+                            <div class="collapsible-body company-news"></div>
                         </li>
                     </ul>
                 </div>
