--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </div>
         </div>
     </div>
+
     <div id="infoContainer">
         <div class="row">
             <div class="column col s12">
@@ -88,35 +89,39 @@
             </div>
         </div>
     </div>
-    <!-- TradingView Widget BEGIN -->
-    <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">
-        {
-            "symbols": [
-                {
-                    "proName": "INDEX:SPX",
-                    "title": "S&P 500"
-                },
-                {
-                    "proName": "INDEX:IUXX",
-                    "title": "Nasdaq 100"
-                },
-                {
-                    "proName": "FX_IDC:EURUSD",
-                    "title": "EUR/USD"
-                },
-                {
-                    "proName": "NYMEX:CL1!",
-                    "title": "Crude Oil"
-                },
-                {
-                    "proName": "FX_IDC:XAUUSD",
-                    "title": "Gold"
-                }
-            ],
-                "locale": "en"
-        }
-    </script>
+
+    <footer class="page-footer footer-fixed">
+        <!-- TradingView Widget BEGIN -->
+        <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">
+            {
+                "symbols": [
+                    {
+                        "proName": "INDEX:SPX",
+                        "title": "S&P 500"
+                    },
+                    {
+                        "proName": "INDEX:IUXX",
+                        "title": "Nasdaq 100"
+                    },
+                    {
+                        "proName": "FX_IDC:EURUSD",
+                        "title": "EUR/USD"
+                    },
+                    {
+                        "proName": "NYMEX:CL1!",
+                        "title": "Crude Oil"
+                    },
+                    {
+                        "proName": "FX_IDC:XAUUSD",
+                        "title": "Gold"
+                    }
+                ],
+                    "locale": "en"
+            }
+        </script>
+    </footer>
     <!-- TradingView Widget END -->
+    </div>
 </body>
 
 </html>
