run through the API's

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- <script src="assets/javascript/app.js"></script> -->
     <!-- Adding main javascript -->
     <script src="assets/javascript/main.js"></script>
+    <script>var myFunctionTag = false;</script>
     <!-- Adding ajax javascript -->
     <script src="assets/javascript/ajax.js"></script>
 
@@ -46,7 +47,6 @@
             </div>
         </nav>
     </div>
-
     <div id="introContainer">
         <div class="row">
             <div class="carousel">
@@ -75,7 +75,7 @@
                             <div class="collapsible-header z-depth-2">
                                 <i class="material-icons">attach_money</i>Stock Price</div>
                             <div class="collapsible-body stock-price">
-                                <span id="stock-price">Lorem ipsum dolor sit amet.</span>
+                                <span id="stock-price"></span>
                             </div>
                         </li>
                         <li>
