--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </ul>-->
     <div id="introContainer">
         <div class="row">
-            <div class="carousel">
+            <div data-visibility="visible" class="carousel">
                 <img class="carousel-item" id="amazon" src="assets/images/amazon.png">
                 <img class="carousel-item" id="tesla" src="assets/images/tesla.png">
                 <img class="carousel-item" id="netflix" src="assets/images/netflix.png">
